--- a/index.html
+++ b/index.html
@@ -6,12 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Sign Up Arl</title>
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css" />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <script src="assets/js/jquery.js"></script>
-    <script src="assets/js/script.js"></script>
-    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+    <section>
+      <div class="container wrapcard">
+        <div class="card" style="width: 18rem">
+          <img src="..." class="card-img-top" alt="..." />
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- <script src="assets/js/script.js"></script> -->
+    <script src="bootstrap/js/bootstrap.min.js"></script>
   </body>
 </html>
