--- a/index.html
+++ b/index.html
@@ -12,18 +12,82 @@
   <body>
     <section>
       <div class="container wrapcard">
-        <div class="card" style="width: 18rem">
-          <img src="..." class="card-img-top" alt="..." />
+        <div class="card" style="width: 15rem">
+          <img src="img/Mount-1.jpg" class="card-img-top" alt="Mountain" />
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
+            <h5 class="card-title">Top Winter Location</h5>
+            <p class="card-text" style="font-size: 12px; color: rgb(122, 116, 116)">More than 200 Location</p>
+
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <a href="#">SHARE</a>
+            <a href="#">EXPLORE</a>
+          </div>
+        </div>
+
+        <div class="card" style="width: 15rem">
+          <img src="img/road.jpg" class="card-img-top" alt="Mountain" />
+          <div class="card-body">
+            <h5 class="card-title">Top Eastern Road TRip</h5>
+            <p class="card-text" style="font-size: 12px; color: rgb(122, 116, 116)">More than 200 Location</p>
+
+            <a href="#">SHARE</a>
+            <a href="#">EXPLORE</a>
+          </div>
+        </div>
+
+        <div class="card" style="width: 15rem">
+          <div class="profile">
+            <div class="pict">
+              <img id="poto" src="img/peo.jpg" alt="" />
+            </div>
+            <div class="nama">
+              <p>Christy</p>
+              <p>20 minutes ago</p>
+            </div>
+          </div>
+          <img src="img/Mount-1.jpg" class="card-img-top" alt="Mountain" />
+          <div class="card-body">
+            <h5 class="card-title">Top Winter Location</h5>
+            <p class="card-text" style="font-size: 12px; color: rgb(122, 116, 116)">More than 200 Location</p>
+
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          </div>
+        </div>
+
+        <div class="card-love" style="width: 15rem">
+          <img src="img/road.jpg" class="card-img-top" alt="Mountain" />
+          <div class="card-body">
+            <div class="logo">
+              <ul>
+                <li><img id="l1" src="img/pngwing.com.png" alt="" /></li>
+                <li><img id="l2" src="img/save.svg" alt="" /></li>
+                <li><img id="l3" src="img/lok.png" alt="" /></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+
+        <div class="modal" tabindex="-1">
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title">Modal title</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+              </div>
+              <div class="modal-body">
+                <p>Modal body text goes here.</p>
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Save changes</button>
+              </div>
+            </div>
           </div>
         </div>
       </div>
     </section>
 
-    <!-- <script src="assets/js/script.js"></script> -->
+    <script src="JS/script.js"></script>
     <script src="bootstrap/js/bootstrap.min.js"></script>
   </body>
 </html>
