--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <p class="card-text" style="font-size: 12px; color: rgb(122, 116, 116)">More than 200 Location</p>
 
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#">SHARE</a>
+            <a type="button" href="#" onclick="document.getElementById('id01').style.display='block'">SHARE</a>
             <a href="#">EXPLORE</a>
           </div>
         </div>
@@ -30,7 +30,7 @@
             <h5 class="card-title">Top Eastern Road TRip</h5>
             <p class="card-text" style="font-size: 12px; color: rgb(122, 116, 116)">More than 200 Location</p>
 
-            <a href="#">SHARE</a>
+            <a type="button" href="#" onclick="document.getElementById('id01').style.display='block'">SHARE</a>
             <a href="#">EXPLORE</a>
           </div>
         </div>
@@ -67,7 +67,7 @@
           </div>
         </div>
 
-        <div class="modal" tabindex="-1">
+        <div class="modal" tabindex="-1" id="id01">
           <div class="modal-dialog">
             <div class="modal-content">
               <div class="modal-header">
