--- a/index.html
+++ b/index.html
@@ -4,10 +4,88 @@
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Sign Up Arl</title>
+    <title>CARD</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="style.css" />
+    <style>
+      section {
+        /* width: 1500px; */
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        border: 2px solid rgb(247, 18, 18);
+        margin: 50px auto;
+        padding: 3px;
+      }
+
+      .btn-pilih {
+        margin-left: 100px;
+      }
+
+      .wrapcard {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        justify-content: space-between;
+        align-items: flex-start;
+      }
+
+      .pict {
+        width: 60px;
+        height: 60px;
+        overflow: hidden;
+        border-radius: 50%;
+        margin-left: 5px;
+      }
+
+      #poto {
+        width: 80px;
+        height: 78px;
+      }
+
+      .profile {
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+      }
+
+      .nama {
+        margin-left: 10px;
+      }
+
+      .nama p:nth-child(1) {
+        margin-top: 20px;
+      }
+
+      .nama p:nth-child(2) {
+        margin-top: -20px;
+        opacity: 40%;
+        font-size: 14px;
+      }
+
+      .card-body button {
+        background-color: none;
+      }
+
+      .card-love ul li img {
+        width: 15px;
+        height: 15px;
+      }
+
+      .card-love ul {
+        display: flex;
+        justify-content: flex-end;
+        list-style: none;
+      }
+
+      .card-love ul li {
+        margin: 3px;
+      }
+
+      .card-love {
+        border: 2px solid #000;
+      }
+    </style>
   </head>
   <body>
     <section>
