--- a/Page.html
+++ b/Page.html
@@ -50,6 +50,7 @@
       .harga {
         display: flex;
         flex-direction: column;
+        text-align: center;
       }
 
       .head-card {
@@ -101,7 +102,7 @@
           </div>
           <div class="card-body">
             <div class="harga">
-              <h5 class="card-title" style="font-size: 100px">4<span style="font-size: 24px">/month</span></h5>
+              <h5 class="card-title" style="font-size: 100px">8<span style="font-size: 24px">/month</span></h5>
             </div>
             <hr />
             <ul>
@@ -119,7 +120,7 @@
           </div>
           <div class="card-body">
             <div class="harga">
-              <h5 class="card-title" style="font-size: 100px">4<span style="font-size: 24px">/month</span></h5>
+              <h5 class="card-title" style="font-size: 100px">12<span style="font-size: 24px">/month</span></h5>
             </div>
             <hr />
             <ul>
