--- a/Page.html
+++ b/Page.html
@@ -68,6 +68,10 @@
       .card2:hover {
         margin-top: 20px;
       }
+
+      #buynow {
+        text-align: center;
+      }
     </style>
   </head>
   <body>
@@ -92,13 +96,13 @@
               <li>10 Page</li>
               <li>100 Mb this page</li>
             </ul>
-            <a href="#" class="btn btn-primary" onclick="explore()">Go somewhere</a>
+            <a id="buynow" href="#" class="btn btn-primary" onclick="explore()">BUY NOW</a>
           </div>
         </div>
 
         <div class="card card2" style="width: 18rem">
           <div class="head-card">
-            <h5>BASIC</h5>
+            <h5>STANDART <span style="text-align: end; color: white; size: 12px">save 15%</span></h5>
           </div>
           <div class="card-body">
             <div class="harga">
@@ -106,17 +110,17 @@
             </div>
             <hr />
             <ul>
-              <li>10 Projects</li>
-              <li>10 Page</li>
-              <li>100 Mb this page</li>
+              <li>20 Projects</li>
+              <li>20 Page</li>
+              <li>200 Mb this page</li>
             </ul>
-            <a href="#" class="btn btn-primary" onclick="explore()">Go somewhere</a>
+            <a id="buynow" href="#" class="btn btn-primary" onclick="explore()">BUY NOW</a>
           </div>
         </div>
 
         <div class="card card2" style="width: 18rem">
           <div class="head-card">
-            <h5>BASIC</h5>
+            <h5>ADVANCE</h5>
           </div>
           <div class="card-body">
             <div class="harga">
@@ -124,11 +128,11 @@
             </div>
             <hr />
             <ul>
-              <li>10 Projects</li>
-              <li>10 Page</li>
-              <li>100 Mb this page</li>
+              <li>40 Projects</li>
+              <li>40 Page</li>
+              <li>500 Mb this page</li>
             </ul>
-            <a href="#" class="btn btn-primary" onclick="explore()">Go somewhere</a>
+            <a id="buynow" href="#" class="btn btn-primary" onclick="explore()">BUY NOW</a>
           </div>
         </div>
       </div>
@@ -137,7 +141,7 @@
 
       <!-- Card 3 -->
 
-      <div><h2>Frequently Asked Quetion</h2></div>
+      <div><h2 style="color: rgba(0, 0, 0, 0.342)">Frequently Asked Quetion</h2></div>
 
       <div class="text-par">
         <div class="cc">
